Fix Gap Overflow & Hover Font Size

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,10 @@ body {
   display: grid;
   grid-template-columns: 1fr 600px 1fr;
   grid-template-rows: 1fr;
-  height: 100vh;
-  width: 100vh;
   justify-content: center;
   font-size: 20px;
   font-family: "DigitalFont";
-  color: black;
+  color: #000000;
   background-color: #cae7df;
 }
 
@@ -22,12 +20,12 @@ body {
   display: grid;
   grid-column: 2/3;
   grid-row: 1/2;
-  grid-template-columns: 150px 150px 150px 150px;
+  grid-template-columns: 144px 144px 144px 144px;
   grid-template-rows: 200px 150px 150px 150px 150px;
+  grid-gap: 8px;
   justify-items: center;
   align-items: center;
   margin-top: 25px;
-  gap: 7px;
 }
 
 .calc-display {
@@ -63,6 +61,7 @@ button {
 .btn-number:hover,
 .btn-function:hover {
   transform: scale(1.05);
+  font-size: 40px;
 }
 
 .btn-number,
